--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<h1>Angular 11 with Bootstrap</h1>
-<h3>please replace this with your application specific stuff!</h3>
-
-
-<router-outlet></router-outlet>
+<div class="container-fluid">
+    <app-nav></app-nav>
+    <router-outlet></router-outlet>
+</div>
